# StringArt

./: .gitignore  CMakeLists.txt  README.md  denoise.py  run.ps1
src/StringArt/: CMakeLists.txt  image_process.hpp  l2_norm.cuh  l2_norm.hpp.bak  main.cpp  string_art.hpp  xiaolin.hpp
src/StringArt/include/: image_draw.cuh  image_limits.cuh  image_process.hpp  l2_norm.cuh  pin.hpp  string_art.cuh  string_art.hpp  string_diff.cuh  string_index.cuh  string_mod.cuh  string_mod.hpp  utils.cuh  xiaolin.cuh
src/StringArt/include/maxidx/: ReduceMaxIdxOptimized.cuh
src/StringArtCuda/: CMakeLists.txt  main.cu
src/StringArtSequential/: CMakeLists.txt  main.cpp
src/stb/: CMakeLists.txt
